force-app/main/default/objects/copado__Team__c/fields/Offshore_Devops__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Devops__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offshore Devops</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>