force-app/main/default/objects/copado__Team__c/fields/Onshore_DevOps__c.field-meta.xml
<CustomField>
    <fullName>Onshore_DevOps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onshore DevOps</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>