force-app/main/default/objects/copado__Team__c/fields/Tech_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_Lead_Name__c</fullName>
    <label>Tech Lead Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>